codepkg/objects/Current_Priorities__c.object
<CustomObject>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Priority Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Current Priorities</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Current Priorities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>